Full result from tables in products APIs
